@@ -1,4 +1,4 @@
-2022-01-08
+2022-01-09
 
         * Version 2.0.0 released
         ========================
